discussion/kv_engine/160007/160007_rev16_discussion.txt
======================================================================================================================
DESCRIPTION:

Not for review: nexus variants/config

Change-Id: Ic22a4b6c55c0586db2135338b57ba5032980d8b4

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2021-09-14 07:09:11.000000000
Message: 
Uploaded patch set 16: Patch Set 15 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-09-14 07:10:33.000000000
Message: 
Patch Set 16: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12336/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GMock.h:32:10: error: "gmock/gmock.h" file not found [clang-diagnostic-error]
#include <gmock/gmock.h>
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GTest.h:32:10: error: "gtest/gtest.h" file not found [clang-diagnostic-error]
#include <gtest/gtest.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12336/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GMock.h:32:10:
error: "gmock/gmock.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12336/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/11126/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
